@@ -9,7 +9,8 @@ Changes in progress
 - Added message to warn user about quota exceeded in BuddyPress Activity+
 - Improved some styles (GCE, buttons, table and image margin with text and code styling) (GitHub #208)
 - GCE: Changed default cache duration to 300 seconds (Trello #875)
-- Convert Socialmedia to plugin (GitHub #64 - Partial fix)
+- Convert Socialmedia to a plugin (GitHub #64 - Partial fix)
+- Convert Enllaços educatius to a plugin (GitHub #213)
 - Removed link to Social Articles in BuddyPress admin page
 - Updated mailer library
 - Added some information to replace URL script, for PORTAL
